# joystickMonitor

./: CMakeLists.txt  README.md
advantech/inc/: bdaqctrl.h
resources/: resources.qrc
src/: faststeeringmirror.cpp  faststeeringmirror.h  joystickmanager.cpp  joystickmanager.h  logger.cpp  logger.h  loggingthread.cpp  loggingthread.h  logrecord.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trackdata.h  trackermemory.cpp  trackermemory.h
